# boostydownloader-ultra-hd

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: boosty.rs  cli.rs  gelbooru.rs  main.rs
src/utils/: mod.rs
